# olimp-crm

./: .env.example  .gitignore  AI_ASSISTANT.md  ARCHITECTURE.md  AUDIT_2026_05_12.md  CLAUDE.md  CURRENT_TASK.md  EQUIPMENT.md  MVP_ROADMAP_v3.md  README.md  SCHEMA_v5.md  TELEGRAM_BOT.md  UI_KIT.md  docker-compose.dev.yml  docker-compose.yml
backend/olimp_construction/: README.md  pyproject.toml  requirements.txt
backend/olimp_construction/olimp_construction/: hooks.py  install.py  install_oce.py  modules.txt  tasks.py  telegram_utils.py
backend/olimp_construction/olimp_construction/ai_services/: embeddings.py  qdrant_client.py
backend/olimp_construction/olimp_construction/api/: activity.py  assemblies.py  boqs.py  capacity.py  cashflow.py  catalog.py  certification.py  changeorder.py  crm.py  dadata.py  dashboard.py  documents.py  duplicates.py  entity_timeline.py  equipment.py  estimate.py  estimate_grid.py  evm.py  exports.py  foreman.py  foreman_checkin.py  guarantees.py  inspections.py  ks2.py  ks3.py  lead_routing.py  lead_scoring.py  material_consumption.py  meeting.py  pdf_annotation.py  pipeline.py  project.py  project_updates.py  proposals.py  proposals_export.py  punchlist.py  reconciliation.py  risks.py  schedule.py  search.py  (+10 more)
backend/olimp_construction/olimp_construction/api/ai/: autolink_resources.py  boq_advisor.py  cwicr_import.py  decompose_work.py  seed_work_templates.py  seed_work_templates_ext.py  template_suggester.py  tender_score.py  work_items_search.py  (+2 more)
backend/olimp_construction/olimp_construction/fixtures/: tender_workflow.json
(+470 files in other folders)
