[project]
name = "olimp_construction"
version = "0.1.0"
description = "ERP/CRM модуль для ООО Олимп (промышленное строительство)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "frappe",
    "erpnext",
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "qdrant-client>=1.12.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
